[project]
name = "podplayer"
version = "0.1.0"
description = "A CLI podcast player"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "python-mpv>=1.0.8",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]

[project.scripts]
podplayer = "main:entrypoint"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "player", "feed_controller"]
py-modules = ["main", "logger", "config"]
